# class-points

./: .gitignore  API.md  README.md
backend/: .gitignore  Cargo.toml  README.md  example.py  main.http
backend/.cargo/: config.toml
backend/migrations/2025-11-04-103700-0000_create_posts/: up.sql
backend/migrations/2025-11-04-115003-0000_students/: up.sql
backend/migrations/record_points/: down.sql  up.sql
backend/migrations/records/: up.sql
backend/migrations/students/: up.sql
backend/migrations/users/: up.sql
backend/src/: auth.rs  db.rs  email.rs  error.rs  handlers.rs  main.rs  models.rs  schema.rs  verification.rs
backend/src/auth/: jwt.rs
backend/src/handlers/: points.rs  students.rs  users.rs  web.rs
backend/src/models/: records.rs  students.rs  users.rs
backend/web/: login.html  register.html  style.css
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/assets/css/: colors.css
frontend/app/components/: DashboardLayout.vue  List.vue  WidgetCard.vue
frontend/app/pages/: index.vue
