[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.7.3", features = ["sqlite", "deadpool"] }

axum = { version = "0.8.6", default-features = false, features = ["http1", "json", "tokio", "macros"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }

dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
chrono = "0.4.42"
sha2 = "0.10.9"
rand = "0.9.2"
axum-extra = { version = "0.12.1", features = ["typed-header"] }
