[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Data
diesel = { version = "2.3.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.7.3", features = ["sqlite", "deadpool"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false }

# Authentication
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

# Async & Web
axum = { version = "0.8.6", default-features = false, features = ["http1", "json", "tokio", "macros", "query", "tracing"] }
axum-extra = { version = "0.12.1", default-features = false, features = ["typed-header"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
lettre = { version = "0.11.19", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# Misc
dotenvy = { version = "0.15", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
eyre = "0.6.12"
